grammar/src/grammar_parser/snapshots/grammar__grammar_parser__lex__tests__code_block_nested.snap
---
source: grammar/src/grammar_parser/lex.rs
expression: result
---
[
    Ok(
        (
            0,
            Token {
                kind: Separator,
                text: "\n",
            },
            1,
        ),
    ),
    Ok(
        (
            1,
            Token {
                kind: CodeBlock,
                text: "{ {}{1} }",
            },
            10,
        ),
    ),
    Ok(
        (
            14,
            Token {
                kind: CodeBlock,
                text: "{{ {{{ {{ {{.}} }} {{{{} }}",
            },
            41,
        ),
    ),
]
