grammar/src/grammar_parser/snapshots/grammar__grammar_parser__lex__tests__layout_nested.snap
---
source: grammar/src/grammar_parser/lex.rs
expression: result
---
[
    Ok(
        (
            0,
            Token {
                kind: Separator,
                text: "\n",
            },
            1,
        ),
    ),
    Ok(
        (
            1,
            Token {
                kind: Ident,
                text: "foo",
            },
            4,
        ),
    ),
    Ok(
        (
            5,
            Token {
                kind: Arrow,
                text: "->",
            },
            7,
        ),
    ),
    Ok(
        (
            7,
            Token {
                kind: Enter,
                text: "\n  ",
            },
            10,
        ),
    ),
    Ok(
        (
            10,
            Token {
                kind: String,
                text: "\"bar\"",
            },
            15,
        ),
    ),
    Ok(
        (
            15,
            Token {
                kind: Arrow,
                text: "->",
            },
            17,
        ),
    ),
    Ok(
        (
            17,
            Token {
                kind: Enter,
                text: " ",
            },
            18,
        ),
    ),
    Ok(
        (
            18,
            Token {
                kind: LParen,
                text: "(",
            },
            19,
        ),
    ),
    Ok(
        (
            20,
            Token {
                kind: Assign,
                text: "=",
            },
            21,
        ),
    ),
    Ok(
        (
            22,
            Token {
                kind: RParen,
                text: ")",
            },
            23,
        ),
    ),
    Ok(
        (
            23,
            Token {
                kind: Separator,
                text: "\n          \n          ",
            },
            45,
        ),
    ),
    Ok(
        (
            45,
            Token {
                kind: Percent,
                text: "%",
            },
            46,
        ),
    ),
    Ok(
        (
            46,
            Token {
                kind: Leave,
                text: "",
            },
            46,
        ),
    ),
    Ok(
        (
            51,
            Token {
                kind: Plus,
                text: "+",
            },
            52,
        ),
    ),
    Ok(
        (
            52,
            Token {
                kind: Separator,
                text: "\n  ",
            },
            55,
        ),
    ),
    Ok(
        (
            55,
            Token {
                kind: Asterisk,
                text: "*",
            },
            56,
        ),
    ),
    Ok(
        (
            59,
            Token {
                kind: Leave,
                text: "",
            },
            59,
        ),
    ),
]
