grammar/src/grammar_parser/snapshots/grammar__grammar_parser__lex__tests__separator_toplevel.snap
---
source: grammar/src/grammar_parser/lex.rs
expression: result
---
[
    Ok(
        (
            0,
            Token {
                kind: Separator,
                text: "\n",
            },
            1,
        ),
    ),
    Ok(
        (
            1,
            Token {
                kind: Ident,
                text: "foo",
            },
            4,
        ),
    ),
    Ok(
        (
            4,
            Token {
                kind: LParen,
                text: "(",
            },
            5,
        ),
    ),
    Ok(
        (
            6,
            Token {
                kind: RParen,
                text: ")",
            },
            7,
        ),
    ),
    Ok(
        (
            7,
            Token {
                kind: Separator,
                text: "\n",
            },
            8,
        ),
    ),
    Ok(
        (
            8,
            Token {
                kind: Ident,
                text: "bar",
            },
            11,
        ),
    ),
    Ok(
        (
            12,
            Token {
                kind: String,
                text: "\"a\"",
            },
            15,
        ),
    ),
    Ok(
        (
            15,
            Token {
                kind: Separator,
                text: "\n",
            },
            16,
        ),
    ),
    Ok(
        (
            16,
            Token {
                kind: Ident,
                text: "baz",
            },
            19,
        ),
    ),
]
