grammar/src/grammar_parser/snapshots/grammar__grammar_parser__lex__tests__tokens.snap
---
source: grammar/src/grammar_parser/lex.rs
expression: result
---
[
    Ok(
        (
            0,
            Token {
                kind: Newline,
                text: "\n",
            },
            1,
        ),
    ),
    Ok(
        (
            1,
            Token {
                kind: Percent,
                text: "%",
            },
            2,
        ),
    ),
    Ok(
        (
            2,
            Token {
                kind: Percent,
                text: "%",
            },
            3,
        ),
    ),
    Ok(
        (
            4,
            Token {
                kind: Ident,
                text: "web",
            },
            7,
        ),
    ),
    Ok(
        (
            8,
            Token {
                kind: Regex,
                text: "/\\d+\\\\[0-9]\\//",
            },
            22,
        ),
    ),
    Ok(
        (
            31,
            Token {
                kind: Newline,
                text: "\n",
            },
            32,
        ),
    ),
    Ok(
        (
            32,
            Token {
                kind: Indent,
                text: "    ",
            },
            36,
        ),
    ),
    Ok(
        (
            36,
            Token {
                kind: Or,
                text: "|",
            },
            37,
        ),
    ),
    Ok(
        (
            38,
            Token {
                kind: Token,
                text: "token",
            },
            43,
        ),
    ),
    Ok(
        (
            43,
            Token {
                kind: Comma,
                text: ",",
            },
            44,
        ),
    ),
    Ok(
        (
            44,
            Token {
                kind: Start,
                text: "start",
            },
            49,
        ),
    ),
    Ok(
        (
            51,
            Token {
                kind: Newline,
                text: "\n",
            },
            52,
        ),
    ),
    Ok(
        (
            52,
            Token {
                kind: Newline,
                text: "\n",
            },
            53,
        ),
    ),
    Ok(
        (
            53,
            Token {
                kind: Indent,
                text: "  ",
            },
            55,
        ),
    ),
    Ok(
        (
            55,
            Token {
                kind: Assign,
                text: "=",
            },
            56,
        ),
    ),
    Ok(
        (
            58,
            Token {
                kind: LParen,
                text: "(",
            },
            59,
        ),
    ),
    Ok(
        (
            60,
            Token {
                kind: Ident,
                text: "Ax3_",
            },
            64,
        ),
    ),
    Ok(
        (
            65,
            Token {
                kind: RParen,
                text: ")",
            },
            66,
        ),
    ),
    Ok(
        (
            66,
            Token {
                kind: Newline,
                text: "\n",
            },
            67,
        ),
    ),
    Ok(
        (
            70,
            Token {
                kind: Newline,
                text: "\n",
            },
            71,
        ),
    ),
]
